<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textHello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Hello" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonLength"
            android:text="@string/buttonLength" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonWeigth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonWeigth"
            android:text="@string/buttonWeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="buttonFrequency"
            android:text="@string/buttonTime" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Soon" />
    </LinearLayout>

</LinearLayout>